...
            "value": "Zurück"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Back"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Atrás"
...
            "value": "Abbrechen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancelar"
...
            "value": "Verwerfen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Discard"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Descartar"
...
            "value": "Duplizieren"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Duplicate"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Duplicar"
...
            "value": "Generieren"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Generate"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Generar"
...
            "value": "Speichern"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Save"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Guardar"
...
            "value": "Vertrauen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Trust"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Confiar"
...
            "value": "Dateien"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Files"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Archivos"
...
            "value": "Einstellungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Ajustes"
...
            "value": "Hinzufügen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Añadir"
...
            "value": "Tastatur ausblenden"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Hide keyboard"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Ocultar teclado"
...
            "value": "SSH-Schlüssel generieren"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Generate SSH Key"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Generar Clave SSH"
...
            "value": "Schlüssel generieren"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Generate key"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Generar clave"
...
            "value": "Schlüssel importieren"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Import key"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Importar clave"
...
            "value": "Aus Datei laden"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Load from file"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cargar desde archivo"
...
            "value": "SSH-Schlüssel"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "SSH Keys"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Claves SSH"
...
            "value": "Allgemein"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "General"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "General"
...
            "value": "Im Editor öffnen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Open in editor"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Abrir en el editor"
...
